--- a/ximeraUserManual/coverArt/frontCover.tex
+++ b/ximeraUserManual/coverArt/frontCover.tex
@@ -9,11 +9,13 @@
 \definecolor{bkgndcr}{RGB}{50,100, 255}
 \definecolor{bkgndcr}{RGB}{10,100, 50}
 \definecolor{bkgndcr}{RGB}{60,60, 60}
-\definecolor{otherbkgndcr}{RGB}{60,60,60}
 % \definecolor{bkgndcr}{RGB}{255,255, 100}
 
 \definecolor{txtcr}{RGB}{255, 100, 255}
 \definecolor{txtcr}{RGB}{255,255, 100}
+
+\colorlet{otherbkgndcr}{bkgndcr}
+\colorlet{othertxtcr}{txtcr}
 \fi
 \let\othermaketitle\maketitle
 \renewcommand{\maketitle}{
@@ -39,7 +41,7 @@
   \small This document was typeset on \today. \hfill \Large\textsf{\ccbyncsa}\\
   \small\texttt{GIT COMMIT: \input{../.git/refs/heads/minimal}}\\
   \small Source: {\hypersetup{allcolors=txtcr}\docURL}\hfill developed in \textbf{XIMERA}
-\clearpage\pagecolor{white}\color{black}\unboldmath\normalfont\restoregeometry\colorlet{bkgndcr}{white}
+\clearpage\pagecolor{white}\color{black}\unboldmath\normalfont\restoregeometry\colorlet{bkgndcr}{white}\colorlet{txtcr}{black}
 \cleardoublepage
 \mbox{}
 \vspace{3cm}
