--- a/ximeraUserManual/ximeraUserManual.tex
+++ b/ximeraUserManual/ximeraUserManual.tex
@@ -34,6 +34,6 @@
 \activity{printing/printing}
 \activity{seeXimeraInAction/seeXimeraInAction}
         
-\onecolumn\colorlet{bkgndcr}{otherbkgndcr}
+\onecolumn\colorlet{bkgndcr}{otherbkgndcr}\colorlet{txtcr}{othertxtcr}
 \input{coverArt/backCover}
 \end{document}
