--- a/ximeraUserManual/introduction/computer.tex
+++ b/ximeraUserManual/introduction/computer.tex
@@ -8,7 +8,7 @@
     \draw (0,.8) -- (-.2,.9);
     \draw[fill=bkgndcr] (0,-.05) -- (1,-.05) -- (1,-.25) -- (0,-.25) -- cycle;
     \draw[fill=bkgndcr] (0,-.05) -- (0,-.25) -- (-.2,-.15) -- (-.2,.05) -- cycle;
-    \draw[rounded corners=.5pt,fill=gray] (.1,.1) rectangle  (.9,.7);
+    \draw[rounded corners=.5pt,fill=txtcr!50!bkgndcr] (.1,.1) rectangle  (.9,.7);
     \draw (-.2,-.25) -- (1.1,-.25) -- (1.2,-.37) -- (-.1,-.37) -- cycle;
     \draw (-.2,-.25) -- (-.2,-.3) -- (-.1,-.4) -- (-.1,-.37) -- cycle;
     \draw (-.1,-.4) rectangle (1.2,-.37);
