--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -259,10 +259,17 @@ In \verb!aFirstStepInXimera.tex! we write
 \practice{exercises/hintsAndFollowUp}
 \end{document}
 \end{verbatim}
+Note how we give the paths to the exercises.
+
+
 
 \section{Preambles, input paths, and graphics paths}
 
+
 \subsection{A common preamble}
+
+The purpose of a preamble is to ensure all files compile consistently. It is not for cosmetic changes.
+
 
 \subsection{Graphics paths}
 
