--- a/ximeraUserManual/ximeraUserManual.tex
+++ b/ximeraUserManual/ximeraUserManual.tex
@@ -34,6 +34,5 @@
 \activity{printing/printing}
 \activity{seeXimeraInAction/seeXimeraInAction}
         
-\onecolumn\colorlet{bkgndcr}{otherbkgndcr}\colorlet{txtcr}{othertxtcr}
-\input{coverArt/backCover}
+\pdfOnly{\onecolumn\colorlet{bkgndcr}{otherbkgndcr}\colorlet{txtcr}{othertxtcr}\input{coverArt/backCover}}
 \end{document}
