--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -12,7 +12,7 @@
 \end{abstract}
 \maketitle
 
-\textbf{All Ximera files must be hosted in a git repository}, with additional
+\paragraph{All Ximera files must be hosted in a git repository} To deploy, you will also need  additional
 files found in \verb!ximeraFirstSteps!. You have two choices when creating new
 content:
 \begin{itemize}
