--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,5 @@
-%% where to find images
-\graphicspath{  
-{./}
-{./basics/}
-}
+%% Where to find images
+\graphicspath{  %% When looking for images,
+{./}            %% look first at your level,
+{./basics/}     %% then in this folder,
+}    
