--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -11,6 +11,8 @@
 
 \section{Work on your machine}
 
+MAYBE THE ABOVE SHOULD'T BE THE FIRST SECTION, RATHER AN OPENING PARAGRAPH
+
 
 
 \section{Docker}
