--- a/ximeraUserManual/commonUseCases/commonUseCases.tex
+++ b/ximeraUserManual/commonUseCases/commonUseCases.tex
@@ -10,140 +10,189 @@
 \end{abstract}
 \maketitle
 
+There are many ways our friends use Ximera. Some make worksheets, some make
+exercise banks, and some make full textbooks. Common to all of these are the
+use of interactive elements that students submit answers to. We'll call
+anything a student can ``answer'' an \textbf{answerable}.
+
+\begin{warning}
+  All answerables must be \textbf{inside of a theorem-like environment}.
+\end{warning}
+
+With that said, we'll discuss the basic answerables below, and then described
+how they might be used in use cases of: worksheets, exercise banks, and
+textbooks.
+
 \section{Answerables}
 
 This section explores the different types of question types Ximera supports.
 
-\subsection{The \texttt{answer} command}
+\subsection{The \texttt{\textbackslash answer} command}
 
 The basic way of including a answerable item in Ximera is to use the
-\verb|\answer| command. The \verb|\answer| \textbf{must} be inside of
-an environment.
+\verb|\answer| command.
+
+\begin{warning}
+  The \verb|\answer| command must be in \textbf{math-mode} (display or inline)
+  and also be \textbf{inside of a
+    theorem-like environment}.
+\end{warning}
+Here are some examples of how to use \verb!\answer!:
+
+\begin{verbatim}
+\begin{problem}
+State the answer to life, the universe, and everything.
+\[
+\answer{42}
+\]
+\end{problem}
+\end{verbatim}
+
+\begin{verbatim}
+\begin{exercise}
+Compute:
+\[
+\frac{d}{dx} \sin(3x) =  \answer{3\cos(3x)}
+\]
+\end{exercise}
+\end{verbatim}
 
 \begin{verbatim}
 \begin{question}
-$3\times 2 = \answer{6}$
+For each of the following functions, find $x$ such that it is a critical point, or write ``NA'' if none exists.
+\begin{enumerate}
+  \item For $f(x) = |x-4|$, $x$ is a critical point when $x=\answer{4}$.
+  \item For $g(x) = x^2-4x+1$, $x$ is a critical point when $x=\answer{2}$.
+  \item For $h(x) = 3x-2$, $x$ is a critical point when $x=\answer[format=string]{NA}$.
+Find $x$ such that where $f(x) = |x-4|$ has a critical point or 
 \end{question}
 \end{verbatim}
 
-Will produce the question:
-
-\begin{question}
-  $3\times 2 = \answer{6}$
-\end{question}
-
-In addition to numerical answers, we also support elementary functions:
-
-\begin{verbatim}
-\begin{question}
-  $ \frac{\partial}{\partial x} x^2\sin(y) =  \answer{2x\sin(y)}$
-\end{question}
-\end{verbatim}
-
-Produces:
-
-\begin{question}
-  $\frac{\partial}{\partial x} x^2\sin(y) = \answer{2x\sin(y)}$
-\end{question}
-
-\begin{remark}
-  Under the hood, Ximera is parsing the user input, producing a
-  function, and checking the user input function against ``answer'' at
-  $100$ different complex numbers, and seeing if the results are
-  ``reasonably'' close to each other.  We compare the complex extensions
-  of these functions to circumvent domain issues.
-\end{remark}
-
-While \textbf{any} environment can contain the command \verb|\answer|,
-there are four special environments: \verb|question|, \verb|exercise|,
-\verb|problem|, \verb|exploration|. Each of these environments is the
-same, except for the name. These environment interact with the
-optional arguments in the documentclass in useful ways. We'll discuss
-this later.
-
-\paragraph{How the answer box validates an answer}
-
-It uses more than a dozen algorithms to check if the student's provided answer
-is mathematically equivalent to the content author's provided answer. Most of
-these are used as shortcuts to allow faster authentication - for example, if
-the two answers are exact string matches it will immediately be marked as
-correct. But if the validation fails (returns false) it proceeds to the next
-validation method. If every validation method returns false/incorrect,
-\textit{then} the answer is marked wrong. If \textit{any} of the validators
-returns ``correct'', then the answer is marked correct. So the multiple
-validation techniques are more of a sieve than different validation aspects.
-
-Most noteworthy is that the \textit{final} validator in this sieve is
-computationally intensive (hence we want to try and do 'quick' checks first)
-but it is exceptionally powerful. It uses the identity theorem from complex
-analysis - which essentially says that, if the two functions agree on a subset
-of $\mathbb{C}$ with an accumulation point, then they are the same function.
-
-In this case, Ximera picks a few hundred points just off the real axis in the
-complex plane that mimic a converging sequence in some sense (a sequence whose
-distance between points is strictly decreasing), and tests the student given
-answer and the author-given answer. If they agree (up to machine precision) on
-more than 98\% of those points, it declares them equal. The nature of machine
-precision requires the 98\%, but essentially, if Ximera marks it correct due to
-this algorithm, it is \textit{exceptionally} unlikely that the answer isn't a
-correct answer - especially at the student level we use Ximera (i.e. calc
-sequence and below).
-
-\subsection{Optional Arguments}
-
-There are also a number of optional arguments/key-values that can be provided
-to the \verb|\answer| command, for a variety of effects. Most of these are
-``key-value'' pairs, meaning that they have the form ``key=value''. I outline
-the key names below and will give examples of values one might use for the
-given key.
-
+There are also a number of optional arguments that can be passed
+to the \verb|\answer| command.
 \begin{description}
   \item[tolerance] The Tolerance key-value sets a $\pm$ value on the
     author's (numeric) answer that will be accepted from a student. For
     example,
     the answer box \verb|\answer[tolerance=0.1]{\pi}| would accept anything in
     the
-    range of $[\pi-0.1,\pi+0.1]$ as correct. This was primarily intended to be
-    used
-    for graphical applications, to allow for ``fuzzy answers'' on a graph.
-  \item[format=string] The Format key-value can change what format the answer
-    box
-    expects to receive (and thus how to validate). For example, using the
-    command
-    \verb|$\answer[format=string]{Cat}$| will validate Cat, cAt,caT, cat all as
-    correct. If spaces are inserted before, between, or after, it will be marked as
-    incorrect.
-    would have been accepted.
-
-  \item[given] Sometimes you will need to show an answer in the PDF.
-  \item[validator] This key-value allows you to load a validator in-line
-  from a prior javascript environment. It's important to note here that
-  \textbf{this specific validator call} actually uses the Ximera validation
-  system, and not the generic javascript/python call. As a result, it is
-  \textit{far} superior to the validator environment, but it also only works
-  from
-  a single answer box, which makes it difficult to use for more complex
-  problems.
-
-  In practice, you would use a javascript environment to define a js function
-  that returns some kind of true/false type value first. Once you have that
-  `validateFunc' function, you then call it in the answer box as
-  \verb|\answer[validator=validateFunc]{answer-here}| and the validation of
-  the
-  student answer will be entirely decided by the validateFunc you wrote
-  earlier -
-  which may or may not use the `answer-here' content-author's answer.
-
-\item[id] This is used to set an id for the student's answer, which can be
-  called by a validator or some other code. So something like
-  \verb|\answer[id=x]{}| would take whatever the student input into that
-  answer
-  box and assign it as the value of the python variable ``x'', which could be
-  called in a validator environment or some other code somewhere. I haven't
-  played around with this much \textit{other} than in custom validator
-  environments.
-
+    range of $[\pi-0.1,\pi+0.1]$ as correct.
+  \item[format=string] This is for validating ``words'' typed into an answer
+    box. Here
+    \verb|$\answer[format=string]{Cat}$| will validate \verb!Cat!,
+    \verb!cAt!,\verb!caT!, \verb!cat! all as
+    correct. However, if spaces are inserted before, between, or after, it will
+    be marked as incorrect.
+  \item[given] Sometimes you will need to show an answer in the PDF for the
+    content to be understandable in a PDF setting. Here ``given'' means that
+    the
+    answer is ``given'' to the student in the PDF.
+  \item[validator] This is an advanced topic. This key-value allows you to load
+    a validator in-line
+    from a prior javascript environment.
+  \item[id] This is an advanced topic. This is used to set an id for the
+    student's answer, which can be
+    called by a validator or some other code.
 \end{description}
+
+NO SPACES
+
+\begin{problem}
+Problem with tol. $100$ tol of $5$  \[
+  =\answer[tolerance=5]{100}
+  \]
+  \end{problem}
+
+
+
+\paragraph{How the answer box validates an answer}
+
+It uses more than a dozen algorithms to check if the student's provided answer
+is mathematically equivalent to the content author's provided answer. If any
+report the answer as being correct, then it is marked as correct. 
+
+\begin{warning}
+  By SOMEBODY's Theorem, the language of high school math cannot be parsed.
+This means that when attempting to understand student work, we must make a decision:
+\begin{itemize}
+  \item To sometimes count correct submissions as incorrect.
+  \item To sometimes count incorrect submissions as correct.
+\end{itemize}
+For the Ximera platform, we chose to \textbf{sometimes count incorrect submissions as correct}.
+\end{warning}
+
+With that dire warning notwithstanding, let me give a concrete example:
+\begin{verbatim}
+  Compute
+  \[
+10+ 2^40 = \answer{10+ 2^40}
+  \]
+\end{verbatim}
+
+Ximera accepts it as correct, even though we obviously know that's not
+true. But that's because $2^{-40}$ is a number that is too small for machine
+precision - so to the computer \textit{running} Ximera, it is effectively
+indistinguishable from zero. This is just an inherent restriction based on the
+machine running Ximera, rather than Ximera itself - but it can be important to
+be aware of, since it can crop up in other ways. For example, if you have
+something like $e^{-200|x|^{100}}$, then almost regardless of what number
+Ximera picks in the complex plane, chances are excellent that the result would
+be too small for machine precision to detect - meaning that the entire
+\textit{function} is indistinguishable from the constant zero. This can crop up
+as a result of integrating or differentiating weird functions that end up
+having extra terms that it is important for students to realize exist (e.g. you
+want to verify they used the chain rule and not just the base derivative rule)
+but the ``extra part'' doesn't seem to matter to Ximera - this is typically an
+issue of machine precision.
+
+
+
+\subsubsection*{Ximera Errs on the side of the student}
+
+Generally, answer validation sides with the student. In most cases this
+philosophy isn't relevant, but it is noteworthy here because this means that if
+the \verb|\answer| command can't understand your provided answer, then it will
+default to mark \textit{any} answer from the student correct. In practice, if
+you find that you have an answer box that is marking anything/everything
+correct, this is probably because there is some kind of typo or character in
+the answer box that it cannot understand.
+
+\subsubsection*{Answer Box can be a little too good...}
+
+Although the validation technique is impressively comprehensive in
+practice, that can be problematic when you want the answer in a specific
+\textit{form}. For example, if Ximera will take any function that is
+mathematically equivalent to the form the author provided, it becomes very
+difficult to validate whether or not the student's answer is, say, factored.
+You can often work around this problem with clever question design, or by
+writing a custom validator to capture the specific property or aspect that you
+are trying to assess (as it is less important to only validate the equality,
+and more important to validate the form - often in addition to the equality, of
+the answer).
+
+\subsubsection*{Ximera is still running on a computer}
+
+A
+\subsubsection{Answers are exposed via right-click}
+
+For accessibility reasons (like screen readers and the like) the library
+that powers the answer box has a bunch of features bundled in, one of which is
+the ability to right-click and get different formatting of its contents.
+Unfortunately, if you right-click and go to ``show math as'' and then ``tex
+commands'' you can very easily see the contents of the answer command that was
+used in the answer file. This information isn't necessary for accessibility
+(after all, the answer box is suppose to contain the actual content supplied by
+the student, and doesn't have any content the student needs to know about) but
+it's tied to the behavior of the underlying library that supports \textit{all}
+the rendered math on the page, so we can't remove it without killing
+\textit{all} accessibility.
+
+However, it is easily countered in the specific case of the answer box,
+which we detail in the
+\href{https://xronos.clas.ufl.edu/examples/exampleCore/supplemental/hiddenAnswers}{how
+  to hide answers} section of the documentation, for those that are interested.
+
+\subsection{Optional Arguments}
 
 \subsection*{Examples}
 
@@ -189,80 +238,11 @@ frustration on the part of the student.
 
 \subsection*{Potential Pitfalls and Problems}
 
-\subsubsection*{Ximera Errs on the side of the student}
-
-Generally, answer validation sides with the student. In most cases this
-philosophy isn't relevant, but it is noteworthy here because this means that if
-the \verb|\answer| command can't understand your provided answer, then it will
-default to mark \textit{any} answer from the student correct. In practice, if
-you find that you have an answer box that is marking anything/everything
-correct, this is probably because there is some kind of typo or character in
-the answer box that it cannot understand.
-
-\subsubsection*{Answer Box can be a little too good...}
-
-Although the validation technique is impressively comprehensive in
-practice, that can be problematic when you want the answer in a specific
-\textit{form}. For example, if Ximera will take any function that is
-mathematically equivalent to the form the author provided, it becomes very
-difficult to validate whether or not the student's answer is, say, factored.
-You can often work around this problem with clever question design, or by
-writing a custom validator to capture the specific property or aspect that you
-are trying to assess (as it is less important to only validate the equality,
-and more important to validate the form - often in addition to the equality, of
-the answer).
-
-\subsubsection*{Ximera is still running on a computer}
-
-Also remember that Ximera is still running on a computer, which means it
-doesn't \textit{truly} understand real numbers. Indeed, it only really
-understands computable numbers (which we won't delve into here) but the short
-version, is that anything that is beyond machine-precision can't really be
-assessed accurately by a machine. For example, the following answer box is
-expecting the answer $2x$, but try inputting $2x+2^{-40}$ and see what happens.
-\begin{explanation}
-  $\answer{2x}$.
-\end{explanation}
-Ximera accepts it as correct, even though we obviously know that's not
-true. But that's because $2^{-40}$ is a number that is too small for machine
-precision - so to the computer \textit{running} Ximera, it is effectively
-indistinguishable from zero. This is just an inherent restriction based on the
-machine running Ximera, rather than Ximera itself - but it can be important to
-be aware of, since it can crop up in other ways. For example, if you have
-something like $e^{-200|x|^{100}}$, then almost regardless of what number
-Ximera picks in the complex plane, chances are excellent that the result would
-be too small for machine precision to detect - meaning that the entire
-\textit{function} is indistinguishable from the constant zero. This can crop up
-as a result of integrating or differentiating weird functions that end up
-having extra terms that it is important for students to realize exist (e.g. you
-want to verify they used the chain rule and not just the base derivative rule)
-but the ``extra part'' doesn't seem to matter to Ximera - this is typically an
-issue of machine precision.
-
-\subsubsection{Answers are exposed via right-click}
-
-For accessibility reasons (like screen readers and the like) the library
-that powers the answer box has a bunch of features bundled in, one of which is
-the ability to right-click and get different formatting of its contents.
-Unfortunately, if you right-click and go to ``show math as'' and then ``tex
-commands'' you can very easily see the contents of the answer command that was
-used in the answer file. This information isn't necessary for accessibility
-(after all, the answer box is suppose to contain the actual content supplied by
-the student, and doesn't have any content the student needs to know about) but
-it's tied to the behavior of the underlying library that supports \textit{all}
-the rendered math on the page, so we can't remove it without killing
-\textit{all} accessibility.
-
-However, it is easily countered in the specific case of the answer box,
-which we detail in the
-\href{https://xronos.clas.ufl.edu/examples/exampleCore/supplemental/hiddenAnswers}{how
-  to hide answers} section of the documentation, for those that are interested.
-
 \section{Choice Answer Type}
 
 \subsection{Multiple Choice}
 
-  \begin{verbatim}
+\begin{verbatim}
 \begin{question}
     Which of the following functions has a graph which is a parabola?
     \begin{multipleChoice}
@@ -321,7 +301,7 @@ marked as correct.
 
 \subsection{Select All}
 
-  \begin{verbatim}
+\begin{verbatim}
 \begin{question}
   Which of the following numbers are even?
   \begin{selectAll}
@@ -353,6 +333,13 @@ Produces:
 
 A worksheet is a piece of paper with questions on it.
 
+While \textbf{any} environment can contain the command \verb|\answer|,
+there are four special environments: \verb|question|, \verb|exercise|,
+\verb|problem|, \verb|exploration|. Each of these environments is the
+same, except for the name. These environment interact with the
+optional arguments in the documentclass in useful ways. We'll discuss
+this later.
+
 \section{Exercise banks}
 
 Exercise banks can be made with \verb!xourse! files.
@@ -379,7 +366,7 @@ Within a course
     \item Think about how paths are resolved.
   \end{itemize}
 
-\begin{verbatim} 
+  \begin{verbatim} 
 %% where to look for inputs
 \makeatletter
 \def\input@path{
