--- a/ximeraUserManual/commonUseCases/commonUseCases.tex
+++ b/ximeraUserManual/commonUseCases/commonUseCases.tex
@@ -350,8 +350,7 @@ With a title
 
 Within a course
 
-\onecolumn
-\begin{multicols}{2}
+\pdfOnly{\onecolumn\begin{multicols}{2}}
   \section{Courses}
 
   This section is about ``best practices'' when writing a book
@@ -376,7 +375,7 @@ Within a course
 }
 \makeatother   
 \end{verbatim}
-\end{multicols}
+\pdfOnly{\end{multicols}}
 
 \begin{center}
   \scalebox{.7}{
