--- a/ximeraUserManual/manual.sty
+++ b/ximeraUserManual/manual.sty
@@ -11,7 +11,7 @@
 \RequirePackage[scale=.8]{FiraMono}
 %  \renewcommand*\familydefault{\ttdefault} %% Only if the base font of the document is to be typewriter style
 \RequirePackage[T1]{fontenc}
-\RequirePackage{multicol}
+%\RequirePackage{multicol}
 \RequirePackage{mathtools}
 \RequirePackage[framemethod=TikZ]{mdframed}
 \RequirePackage{pgf}
