--- a/ximeraUserManual/preamble.tex
+++ b/ximeraUserManual/preamble.tex
@@ -33,7 +33,7 @@
 
 \usepackage{qrcode} %% For QR Codes
 \usepackage[normalem]{ulem} % for strikeout
-
+\usepackage{multicol} % multicols -- PDF only
 
 \makeatletter
 %% Make Front style
